--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+!/cli/main3.py
+!/cli/
